css: chromium: fix glyph misalignment
The glyphs were not vertically centered (the 'top' property was
ignored).

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -165,6 +165,7 @@ span.spacer
   padding-left: 10%
   text-align: left
 .glyphicon-hand-right, .glyphicon-hand-left
+  position: fixed
   width: 30px
   height: 30px
   font-size: 30px
